# afemhw

./: .gitignore  README.md
hw2/: hw2.txt
hw2/src/: CMakeLists.txt  element.cpp  element.h  integration.cpp  integration.h  main.cpp
hw2/test/: CMakeLists.txt  test_armadillo.cpp  test_element.cpp  test_helpers.h
hw3/matlab/: E.m  HM4editedversion32point.m  Q4_B_ok.m  Q4_F.m  Q4_F_ref.m  Q4_N.m  Q4_N1.m  Q4_N2.m  Q4_N3.m  Q4_N4.m  Q4_P_ext.m  Q4_dN1_deta.m  Q4_dN1_dxi.m  Q4_dN2_deta.m  Q4_dN2_dxi.m  Q4_dN3_deta.m  Q4_dN3_dxi.m  Q4_dN4_deta.m  Q4_dN4_dxi.m  Q4_dN_dref.m  Q4_dN_dxi.m  S_bar.m  S_vgt.m  hw3_main.m  tangent_stiffness.m
hw3/oct/: debug.jl  fem.jl  integration.jl  main.jl  mat.jl  nonlinear.jl
hw3/src/: CMakeLists.txt  edge.hpp  element.cpp  element.hpp  line.hpp  load.hpp  main.cpp  point.cpp  point.hpp
hw3/test/: CMakeLists.txt  static_const_mat.cpp  test_element.cpp  test_pt.cpp
share/: integration.cpp  integration.hpp
share/test/: CMakeLists.txt  debug.h  test_int.cpp
